--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "node": "^23.8.0"
   }
 }
